# tree105

./: .gitignore  .gitmodules  .prettierignore  .prettierrc.json  404.html  CNAME  README.md  build  cayman_config.yaml  compose.debug.yaml  config.toml  config.yaml  deploy  docker-compose.yaml  index.html  index.xml  package-lock.json  pull-deploy  requirements.txt  sitemap.xml
.github/instructions/: codacy.instructions.md  copilot-instructions.md
about/: index.html
admin-app/: eslint.config.js  index.html  package-lock.json  package.json  routes.csv  tailwind.config.js  tsconfig.app.json  vite.config.ts
caddy/: Caddyfile  Caddyfile.dev  Caddyfile.prod  Caddyfile.template  Dockerfile
categories/: index.html  index.xml
content/: _index.md
details/: index.html
generator/: Dockerfile  config.toml
layouts/: index.html
lostfound/: index.html
paypalsent/: index.html
public/: 404.html  index.html  index.xml  sitemap.xml
register/: index.html
registered/: index.html
series/: index.html  index.xml
server/: Dockerfile  Dockerfile.debug  README.md  confirmation.mjml  create-email-history-full-view.sql  create-email-history-view.sql  create-pickups-view.sql  db.py  email-history-view.sql  email.py  import-contacts.sql  import-stripe-charges.sql  pickups-view.sql  psg.sql  pyproject.toml  requirements.txt  sendgrid.py  server  server.py  testsendgrid.py  treedb.py  treemail.py
server/templates/: confirmation.html  confirmation.mjml
tags/: index.html  index.xml
test/: test_treemail.py
troop105treedrive/: config.yaml
venmoinstructions/: index.html
(+80 files in other folders)
