[project]
name = "server"
version = "0.1.0"
description = "Troop 105 tree pickup"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "annotated-types==0.7.0",
  "blinker==1.9.0",
  "certifi==2024.12.14",
  "charset-normalizer==3.4.0",
  "click==8.1.7",
  "flask==3.1.1",
  "idna==3.10",
  "itsdangerous==2.2.0",
  "jinja2==3.1.6",
  "markupsafe==3.0.2",
  "numpy==2.0.2",
  "packaging==24.1",
  "peewee==3.17.8",
  "pydantic==2.9.2",
  "pydantic-core==2.23.4",
  "pygments==2.18.0",
  "python-dotenv==1.0.1",
  "python-http-client==3.3.7",
  "requests==2.32.4",
  "sendgrid>=6.12.5",
  "google-api-python-client>=2.0.0",
  "google-auth-httplib2>=0.1.0",
  "google-auth-oauthlib>=0.4.0",
  "starkbank-ecdsa==2.2.0",
  "stripe==11.3.0",
  "typing-extensions==4.12.2",
  "urllib3==2.5.0",
  "werkzeug==3.1.3",
]
